syntax = "proto3";

package sysclient;

option go_package = "./sysclient";

//user start---------------------
message LoginReq {
  string user_name = 1;
  string password = 2;
}

message loginResp {
  string status = 1;
  string currentAuthority = 2;
  int64 id = 3;
  string userName = 4;
  string AccessToken = 5;
  int64 AccessExpire = 6;
  int64 RefreshAfter = 7;
}

message InfoReq {
  int64 UserId = 1;
}

message InfoResp {
  string avatar = 1;
  string name = 2;
  repeated MenuListTree menuListTree=3;
  repeated string BackgroundUrls =4;
}

message UserAddReq {
  string email = 1;
  string mobile = 2;
  string name = 3;
  string nick_name = 4;
  string avatar = 5;
  int64 dept_id = 6;
  string create_by = 7;
  int64 role_id = 8;
  int64 job_id = 9;
  int32 status = 10;
}

message UserAddResp {
  string pong = 1;
}

message UserListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string name = 3;
  string nick_name = 4;
  string mobile = 5;
  string email = 6;
  int32 status = 7;
  int64 dept_id = 8;
}

message UserListData{
  int64 id = 1;
  string name = 2;
  string nick_name = 3;
  string avatar = 4;
  string password = 5;
  string salt = 6;
  string email = 7;
  string mobile = 8;
  int32 status = 9;
  int64 dept_id = 10;
  string create_by = 11;
  string create_time = 12;
  string update_by = 13;
  string update_time = 14;
  int32 del_flag = 15;
  int64 job_id = 16;
  int64 role_id = 17;
  string role_name = 18;
  string job_name = 19;
  string dept_name = 20;
}

message UserListResp {
  int64 total = 1;
  repeated  UserListData list = 2;
}

message UserUpdateReq {
  int64 id = 1;
  string email = 2;
  string mobile = 3;
  string name = 4;
  string nick_name = 5;
  string avatar = 6;
  int64 dept_id = 7;
  string update_by = 8;
  int64 role_id = 9;
  int32 status = 10;
  int64 job_id = 11;
}

message UserUpdateResp {
  string pong = 1;
}

message UserDeleteReq {
  repeated int64 ids = 1;
}

message UserDeleteResp {
  string pong = 1;
}


message ReSetPasswordReq {
  int64 id = 1;
  string update_by = 2;
}

message ReSetPasswordResp {
  string pong = 1;
}

message UserStatusReq {
  int64 id = 1;
  int32 status = 2;
  string update_by = 3;
}

message UserStatusResp {
  string pong = 1;
}
//user start---------------------
service UserService {

  rpc Login(LoginReq) returns(loginResp);
  rpc UserInfo(InfoReq) returns(InfoResp);
  rpc UserAdd(UserAddReq) returns(UserAddResp);
  rpc UserList(UserListReq) returns(UserListResp);
  rpc UserUpdate(UserUpdateReq) returns(UserUpdateResp);
  rpc UserDelete(UserDeleteReq) returns(UserDeleteResp);
  rpc ReSetPassword(ReSetPasswordReq) returns(ReSetPasswordResp);
  rpc UpdateUserStatus(UserStatusReq) returns(UserStatusResp);

}

message MenuListTree {
  int64 id = 1;
  string name = 2;
  string icon = 3;
  int64 parent_id = 4;
  string path = 5;
  string vue_path = 6;
  string vue_component = 7;
  string vue_icon = 8;
  string vue_redirect = 9;
}